--- a/playbook.yml
+++ b/playbook.yml
@@ -3,79 +3,7 @@
 - name: 'Provision Image'
   hosts: default
   become: false
-  vars:
-    host_ip: "{{ ansible_default_ipv4.address }}"
   vars_files:
     - vars_playbook.yml
-
-  tasks:
-    - name: send source.list
-      ansible.builtin.copy:
-        src: sources.list
-        dest: /etc/apt/
-        mode: '0644'
-    - name: Update debian packages
-      ansible.builtin.apt:
-        state: present
-        upgrade: yes
-        update_cache: yes
-    - name: install debian packages
-      ansible.builtin.apt:
-        state: present
-        install_recommends: no
-        name:
-         - vim
-         - htop
-         - net-tools
-         - tcpdump
-         - iputils-arping
-         - ufw
-         - ssh
-    - name: Force use ethX ethernet format and FR language
-      ansible.builtin.lineinfile:
-        path: /etc/default/grub
-        regexp: '^GRUB_CMDLINE_LINUX_DEFAULT='
-        line: 'GRUB_CMDLINE_LINUX_DEFAULT="net.ifnames=0 biosdevname=0 keymap=fr(latin9) locale=fr_FR"'
-      notify:
-        - Regen GRUB
-    - name: Set network
-      ansible.builtin.template:
-        src: "interfaces.j2"
-        dest: "/etc/network/interfaces"
-    - name: Set keyboard to fr
-      ansible.builtin.copy:
-        src: "keyboard"
-        dest: /etc/default/keyboard
-      notify:
-        - Reload keyboard
-    - name: Configure Issue
-      ansible.builtin.copy:
-        src: "issue"
-        dest: /etc/issue
-    - name: Configure Login Banner
-      ansible.builtin.copy:
-        src: "motd_info"
-        dest: /etc/motd
-    - name: Enable Routing
-      ansible.posix.sysctl:
-        name: net.ipv4.ip_forward
-        value: '1'
-        state: present
-        reload: yes
-    - name: Configure Rules
-      ansible.builtin.template:
-        src: "user.rules.j2"
-        dest: "/etc/ufw/user.rules"
-    - name: Configure Rules
-      ansible.builtin.template:
-        src: "after.rules.j2"
-        dest: "/etc/ufw/after.rules"
-
-
-  handlers:
-    - name: Regen GRUB
-      ansible.builtin.shell: grub-mkconfig -o /boot/grub/grub.cfg
-    - name: Reload keyboard
-      ansible.builtin.service:
-        name: keyboard-setup
-        state: restarted
+  roles:
+    - lecontesteur.bastion
